// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eslint default 1`] = `
"/.idea/
/node_modules/"
`;

exports[`eslint default 2`] = `
"module.exports = {
	extends: ['@namics/eslint-config/configurations/es8-react.js'].map(require.resolve),
};
"
`;

exports[`eslint default 3`] = `
"{
  \\"devDependencies\\": {
    \\"@namics/eslint-config\\": \\"6.0.1\\",
    \\"eslint\\": \\"5.10.0\\",
    \\"eslint-plugin-import\\": \\"2.14.0\\",
    \\"npm-run-all\\": \\"4.1.3\\"
  },
  \\"scripts\\": {
    \\"lint\\": \\"npm-run-all lint:*\\",
    \\"lint:js\\": \\"eslint .\\"
  }
}"
`;

exports[`eslint with-githooks 1`] = `
"/.idea/
/node_modules/"
`;

exports[`eslint with-githooks 2`] = `
"module.exports = {
	extends: ['@namics/eslint-config/configurations/es8-react.js'].map(require.resolve),
};
"
`;

exports[`eslint with-githooks 3`] = `
"# ~/.huskyrc
# Note: it will run in /bin/sh shell
if command -v nodenv >/dev/null 2>&1; then
  eval \\"$(nodenv init -)\\"
fi"
`;

exports[`eslint with-githooks 4`] = `
"{
  \\"devDependencies\\": {
    \\"@namics/eslint-config\\": \\"6.0.1\\",
    \\"eslint\\": \\"5.10.0\\",
    \\"eslint-plugin-import\\": \\"2.14.0\\",
    \\"husky\\": \\"1.0.1\\",
    \\"lint-staged\\": \\"7.3.0\\",
    \\"npm-run-all\\": \\"4.1.3\\"
  },
  \\"husky\\": {
    \\"hooks\\": {
      \\"pre-commit\\": \\"lint-staged\\"
    }
  },
  \\"lint-staged\\": {
    \\"src/**/*.{js,jsx}\\": [
      \\"eslint\\"
    ]
  },
  \\"scripts\\": {
    \\"lint\\": \\"npm-run-all lint:*\\",
    \\"lint:js\\": \\"eslint .\\"
  }
}"
`;

exports[`eslint with-prettier 1`] = `
"/.idea/
/node_modules/"
`;

exports[`eslint with-prettier 2`] = `
"module.exports = {
	extends: [
		'@namics/eslint-config/configurations/es8-react.js',
		'@namics/eslint-config/configurations/es8-react-disable-styles.js',
	].map(require.resolve),
};
"
`;

exports[`eslint with-prettier 3`] = `
"# Node
**/node_modules
**/package.json
**/package-lock.json

# Generated
**/bower.json
**/lerna.json

# Build
**/build
**/dist
**/public
**/coverage
**/storybook-static

# Nitro
**/project/blueprints
**/.yo-rc.json"
`;

exports[`eslint with-prettier 4`] = `
"module.exports = require('@namics/prettier-config');
"
`;

exports[`eslint with-prettier 5`] = `
"{
  \\"devDependencies\\": {
    \\"@namics/eslint-config\\": \\"6.0.1\\",
    \\"@namics/prettier-config\\": \\"0.2.0\\",
    \\"eslint\\": \\"5.10.0\\",
    \\"eslint-plugin-import\\": \\"2.14.0\\",
    \\"npm-run-all\\": \\"4.1.3\\",
    \\"prettier\\": \\"1.14.3\\"
  },
  \\"scripts\\": {
    \\"lint\\": \\"npm-run-all lint:*\\",
    \\"lint:js\\": \\"eslint .\\",
    \\"prettier\\": \\"prettier --write \\\\\\"**/*.*(js|jsx|ts|tsx|json)\\\\\\"\\"
  }
}"
`;
